# showcode

./: .pdm-python  .readthedocs.yaml  LICENSE  README.en.md  README.md  pyproject.toml  requirements.txt  sphinx-autodoc2.md
.gitee/: PULL_REQUEST_TEMPLATE.zh-CN.md
docs/source/: .#showcode.rst  conf.py  index.rst  modules.rst  showcode.rst  test.py
docs/source/apidocs/: index.rst
docs/source/apidocs/showcode/: showcode.map_api.rst  showcode.merge_doc_table.rst  showcode.merge_xlsx.rst  showcode.rst  showcode.unicjk_del_blank.rst
docs/source/sd44/: map_api.rst
src/showcode/: .pre-commit-config.yaml  Untitled.ipynb  govcn.py  govcn_single.py  map_api.py  merge_doc_table.py  merge_xlsx.py  panda.ipynb  unicjk_del_blank.py
src/showcode/renmian/: govcn.py  govcn_single.py  数据挖掘之任免工作人员.org
