[project]
name = "showcode"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sd44",email = "sd44sd44@yeah.net"},
]
dependencies = [
    "toml",
    "pdm",
    "requests",
    "bs4",
    "lxml",
    "pandas",
    "docx",
    "doc2docx",
    "matplotlib",
    "yapf",
    "bluepy>=1.3.0",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx>=7.2.6",
    "types-beautifulsoup4>=4.12.0.6",
    "pytest-playwright",
    "types-requests>=2.31.0.3",
]
requires-python = "> 3.10.*"
license = {text = "MIT"}
readme = "README.md"


[project.optional-dependencies]
test = [
    "pytest",
    "pytest-pyright",
]

[tool.pytest.ini_options]
addopts = [
        # "--strict-config",
        # "-ra",
        "-v",
        "--capture=no"
]

pythonpath = "src"
testpaths = "tests"

# [tool.pyright]
# extraPaths = ["__pypackages__/<major.minor>/lib/"]

# [tool.pdm.build]
# includes = [
#     "**/*.json",
#     "mypackage/",
# ]
# excludes = [
#     "mypackage/_temp/*"
# ]
# source-includes = ["tests/"]
# Note that the files defined in source-includes will be excluded automatically
# from binary distributions.


[tool.pdm]
distribution = false
[project.urls]
homepage = "https://example.com"
documentation = "https://readthedocs.org"
repository = "https://github.com"
changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

